--- a/CilindrWPF/MainWindow.xaml
+++ b/CilindrWPF/MainWindow.xaml
@@ -7,8 +7,8 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Расчет нагрева цилиндра" Height="800" Width="1000" Icon="/icon.ico">
-    <Grid Background="#787878	">
+        Title="Расчет нагрева цилиндра" Height="800" Width="1000" Icon="/icon.ico" Closed="Window_Closed">
+    <Grid x:Name="Grid" Background="#787878	">
         <StackPanel>
             
             <Button x:Name="Info" Content="Информация" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Background="#CCCCCC" Margin="5,5,5,5" Width="320" Foreground="Black" BorderBrush="#CCCCCC" FontSize="18" Click="Info_Click" Cursor="Hand"></Button>
