--- a/CilindrWPF/ResultTemp.xaml
+++ b/CilindrWPF/ResultTemp.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CilindrWPF"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="690" d:DesignWidth="950">
+             d:DesignHeight="690" d:DesignWidth="950" d:DataContext="{d:DesignInstance local:ResultTemp}">
     <Grid Background="#F6F6F6">
         <StackPanel>
             <Label Content="Число теплового подобия Bi" HorizontalAlignment="Left" Margin="70,65,0,0" FontSize="18"></Label>
@@ -20,8 +21,18 @@
             <TextBox x:Name="TDM" HorizontalAlignment="Right" Width="250" Height="30" BorderBrush="Black" Background="Transparent" FontSize="18" Margin="0,-27,70,0" IsReadOnly="True"></TextBox>
             <Label Content="Относительная разность температур на поверхности цилиндра Θп" HorizontalAlignment="Left" Margin="70,10,0,0" FontSize="18"></Label>
             <TextBox x:Name="TDS" HorizontalAlignment="Right" Width="250" Height="30" BorderBrush="Black" Background="Transparent" FontSize="18" Margin="0,-27,70,0" IsReadOnly="True"></TextBox>
-
-            <Button x:Name="ReportTemp" Content="Сохранить отчет" HorizontalAlignment="Center" Margin="0,55,0,0" FontSize="20" Background="DarkRed" Width="250" Height="45" BorderBrush="DarkRed" Click="ReportTemp_Click"></Button>
+            <Grid Margin="5, 10, 0, 5" Height="260" Width="800">
+                <lvc:CartesianChart Series="{Binding SeriesCollection}" LegendLocation="None">
+                    <lvc:CartesianChart.AxisX>
+                        <lvc:Axis Title="Значение относительной разности температур" Labels="{Binding Labels}" Foreground="Black" Margin="0, 5, 0,0"></lvc:Axis>
+                    </lvc:CartesianChart.AxisX>
+                    <lvc:CartesianChart.AxisY>
+                        <lvc:Axis Title="Расчетное значение показателя, ед." LabelFormatter="{Binding Formatter}" Foreground="Black" Margin="0, 0, 5,0"></lvc:Axis>
+                    </lvc:CartesianChart.AxisY>
+                </lvc:CartesianChart>
+            </Grid>
+            
+            <Button x:Name="ReportTemp" Content="Сохранить отчет" HorizontalAlignment="Center" Margin="0,25,0,0" FontSize="20" Background="DarkRed" Width="250" Height="45" BorderBrush="DarkRed" Click="ReportTemp_Click" Cursor="Hand"></Button>
 
         </StackPanel>
     </Grid>
